syntax = "proto3";
// prevent naming conflicts between different projects.
// package protobuf.proto;

// [START java_declaration]
option java_package = "io.xiaper.protobuf.model";
option java_outer_classname = "MessageProto";
// [END java_declaration]

// 类名前缀
// [START objc_declaration]
//option objc_class_prefix = "Proto";
// [END objc_declaration]

//DoubleValue
//FloatValue
//Int64Value
//UInt64Value
//Int32Value
//UInt32Value
//BoolValue
//StringValue
//BytesValue
//import "google/protobuf/wrappers.proto";
import "user.proto";
import "thread.proto";
// import "queue.proto";
// import "group.proto";

// 注意 1: 每个字段后面的序号一旦投入生产不能随便修改
// 注意 2: 前1~15序号仅需一个字节编码，尽量用在常用字段
// 注意 3: 被删除的field要作为reserved变量，不能重新赋值
// types: bool, int32/int64/uint32/uint64/sint32/sint64/fixed32/fixed64/sfixed32/sfixed64, bytes, float, double, and string

// [START messages]

// 会话类型, 将会话类型作为topic前缀来区分，如：kefu/...., user/..., group/...

// 消息体内容
message Text {
    // 文本消息内容
    string content = 1;
}

message Image {
    //
    string mediaId = 1;
    // 图片消息, 微信pic_url，web版容易引起跨域访问问题，所以要使用image_url
    string picUrl = 2;
    // 存储在自己服务器之后的url
    string imageUrl = 3;
}

message File {
    // 文件消息类型，文件url, 文件类型通过format标示
    string fileUrl = 1;
    // 文件名
    string fileName = 2;
    // 文件大小
    string fileSize = 3;
}

message Voice {
    // 语音消息，图片+语音+视频+短视频 公用字段
    string mediaId = 1;
    // 语音格式amr等
    string format = 2;
    // 语音url
    string voiceUrl = 3;
    // 语音长度
//    google.protobuf.Int32Value length = 4;
    int32 length = 4;
    // 是否已经播放过
    bool played = 5;
}

message Video {
    //
    string mediaId = 1;
    // 视频和短视频
    string thumbMediaId = 2;
    //
    string videoOrShortUrl = 3;
    //
    string videoOrShortThumbUrl = 4;
}

message Location {
    // 地理位置消息
    string locationX = 1;
    //
    string locationY = 2;
    //
    string scale = 3;
    //
    string label = 4;
}

message Link {
    // 链接消息
    string title = 1;
    //
    string description = 2;
    //
    string url = 3;
}

message Extra {
    // 开发者自定义字段内容
    string content = 1;
}

// 消息三要素：1. 谁发送的消息？ 2. 发送给谁的消息？ 3. 发送的消息内容是什么？
message Message {
    // 唯一ID/localId=mid
    string mid = 1;
    // 主题：消息接收者为订阅此topic的人
    string topic = 2;
    // 消息发送状态
    string status = 3;
    // 时间戳
    string createdAt = 4;
    // mqtt clientId
    string clientId = 5;
    // 消息来源客户端ew
    string client = 6;
    // 消息版本
    string version = 7;
    // 消息类型
//    MessageType type = 8;
    string type = 8;
    // 1. 谁发送的消息？ 消息发送者
    User user = 9;
    // 3. 发送的消息内容是什么？消息体内容，至少设置其中一种
    oneof body {
        Text text = 10;
        Image image = 11;
        File file = 12;
        Voice voice = 13;
        Video video = 14;
        Location location = 15;
        Link link = 16;
        Extra extra = 17;
        // 会话, 仅有在通知新会话时设置
        // Thread thread = 18;
        // 队列，仅有在通知新排队设置
        // Queue queue = 19;
        // 群组, 仅有在通知加群通知等设置
        // Group group = 20;
    }
    // 2. 发送给谁的消息？客服会话/一对一会话/群组会话
    Thread thread = 21;
    // string sessionType = 21;
    // // 会话，正常消息不设置，仅有在通知新会话/排队/加群通知等设置其中一种
    // oneof session {
    //     // 会话, 仅有在通知新会话时设置
    //     Thread thread = 18;
    //     // 队列，仅有在通知新排队设置
    //     Queue queue = 19;
    //     // 群组, 仅有在通知加群通知等设置
    //     Group group = 20;
    // }
    // 客户端发送消息id
    // string localId = 21;
}

// 列表
message MessageList {
    //
    repeated Message list = 1;
}
// [END messages]


// 消息类型
//enum MessageType {
//    //  文本消息
//    TEXT = 0;
//    //  图片消息
//    IMAGE = 1;
//    // 文件类型,cpp中冲突,故添加后缀
//    FILE_TYPE = 2;
//    //  语音消息
//    VOICE = 3;
//    // 短视频
//    VIDEO = 4;
//    //
//    SHORT_VIDEO = 5;
//    //
//    LOCATION = 6;
//    //
//    LINK = 7;
//    //
//    EVENT = 8;
//    // 自定义消息类型：内容放在content字段
//    CUSTOM = 9;
//    // 红包
//    RED_PACKET = 10;
//    // 商品
//    COMMODITY = 11;
//    //
//    EVENT_TYPE_SUBSCRIBE = 12;
//    // unsubscribe(取消订阅)
//    EVENT_TYPE_UNSUBSCRIBE = 13;
//    // 用户已关注时的事件推送
//    EVENT_TYPE_SCAN = 14;
//    // 上报地理位置事件
//    EVENT_TYPE_LOCATION = 15;
//    // 点击菜单跳转链接时的事件推送
//    EVENT_TYPE_MENU_VIEW = 16;
//    // 自定义菜单事件
//    EVENT_TYPE_MENU_CLICK = 17;
//    // 点击自定义菜单请求客服
//    EVENT_KEY_MENU_CLICK_AGENT = 18;
//    // 点击自定义菜单请求'关于我们'
//    EVENT_KEY_MENU_CLICK_ABOUT = 19;
//    // 自定义菜单事件推送: 扫码推事件的事件推送
//    EVENT_TYPE_MENU_SCANCODE_PUSH = 20;
//    // 自定义菜单事件推送: 扫码推事件且弹出“消息接收中”提示框的事件推送
//    EVENT_TYPE_MENU_SCANCODE_WAITMSG = 21;
//    // 自定义菜单事件推送: 弹出系统拍照发图的事件推送
//    EVENT_TYPE_MENU_PIC_SYSPHOTO = 22;
//    // 自定义菜单事件推送: 弹出拍照或者相册发图的事件推送
//    EVENT_TYPE_MENU_PIC_PHOTO_OR_ALBUM = 23;
//    // 自定义菜单事件推送: 弹出微信相册发图器的事件推送
//    EVENT_TYPE_MENU_PIC_WEIXIN = 24;
//    // 自定义菜单事件推送: 弹出地理位置选择器的事件推送
//    EVENT_TYPE_MENU_LOCATION_SELECT = 25;
//    // 自定义菜单事件推送: 点击菜单跳转小程序的事件推送
//    EVENT_TYPE_MENU_VIEW_MINIPROGRAM = 26;
//    // 机器人, 自动回复
//    ROBOT = 27;
//    // 问卷
//    QUESTIONNAIRE = 28;
//    // 分公司，方便提取分公司所包含的国家，金吉列大学长
//    COMPANY = 29;
//    // 选择工作组
//    WORK_GROUP = 30;
//    //
//    NOTIFICATION = 31;
//    // 非工作时间
//    NOTIFICATION_NON_WORKING_TIME = 32;
//    // 客服离线，当前无客服在线
//    NOTIFICATION_OFFLINE = 33;
//    // 开始浏览页面
//    NOTIFICATION_BROWSE_START = 34;
//    // 浏览页面结束
//    NOTIFICATION_BROWSE_END = 35;
//    // 邀请访客
//    NOTIFICATION_BROWSE_INVITE = 36;
//    // 访客接受邀请
//    NOTIFICATION_BROWSE_INVITE_ACCEPT = 37;
//    // 访客拒绝邀请
//    NOTIFICATION_BROWSE_INVITE_REJECT = 38;
//    // 新进入会话
//    NOTIFICATION_THREAD = 39;
//    // 重新进入会话
//    NOTIFICATION_THREAD_REENTRY = 40;
//    // 新进入队列
//    NOTIFICATION_QUEUE = 41;
//    // 排队中离开
//    NOTIFICATION_QUEUE_LEAVE = 42;
//    // 接入队列访客
//    NOTIFICATION_QUEUE_ACCEPT = 43;
//    // 自动接入会话
//    NOTIFICATION_ACCEPT_AUTO = 44;
//    // 手动接入
//    NOTIFICATION_ACCEPT_MANUAL = 45;
//    // 上线
//    NOTIFICATION_CONNECT = 46;
//    // 离线
//    NOTIFICATION_DISCONNECT = 47;
//    // 离开会话页面
//    NOTIFICATION_LEAVE = 48;
//    // 邀请评价
//    NOTIFICATION_INVITE_RATE = 49;
//    // 评价结果
//    NOTIFICATION_RATE_RESULT = 50;
//    // 客服关闭会话
//    NOTIFICATION_AGENT_CLOSE = 51;
//    // 访客关闭会话
//    NOTIFICATION_VISITOR_CLOSE = 52;
//    // 自动关闭会话
//    NOTIFICATION_AUTO_CLOSE = 53;
//    // 邀请会话
//    NOTIFICATION_INVITE = 54;
//    // 接受邀请
//    NOTIFICATION_INVITE_ACCEPT = 55;
//    // 拒绝邀请
//    NOTIFICATION_INVITE_REJECT = 56;
//    // 转接会话
//    NOTIFICATION_TRANSFER = 57;
//    // 接受转接
//    NOTIFICATION_TRANSFER_ACCEPT = 58;
//    // 拒绝转接
//    NOTIFICATION_TRANSFER_REJECT = 59;
//    // 满意度请求
//    NOTIFICATION_RATE_REQUEST = 60;
//    // 评价
//    NOTIFICATION_RATE = 61;
//    // 通知支付结果
//    NOTIFICATION_PAY_RESULT = 62;
//    // 普通用户设置 在线状态消息
//    NOTIFICATION_ONLINE_STATUS = 63;
//    // 长连接状态
//    NOTIFICATION_CONNECTION_STATUS = 64;
//    // 客服设置接待状态
//    NOTIFICATION_ACCEPT_STATUS = 65;
//    // 消息预知
//    NOTIFICATION_PREVIEW = 66;
//    // 消息撤回
//    NOTIFICATION_RECALL = 67;
//    // 消息回执：收到消息之后回复给消息发送方
//    NOTIFICATION_RECEIPT = 68;
//    // 踢掉其他客户端
//    NOTIFICATION_KICKOFF = 69;
//    // webrtc通知初始化localStream
//    NOTIFICATION_WEBRTC_INVITE_VIDEO = 70;
//    //
//    NOTIFICATION_WEBRTC_INVITE_AUDIO = 80;
//    // webrtc取消邀请
//    NOTIFICATION_WEBRTC_CANCEL = 81;
//    // webrtc邀请视频会话
//    NOTIFICATION_WEBRTC_OFFER_VIDEO = 82;
//    // webrtc邀请音频会话
//    NOTIFICATION_WEBRTC_OFFER_AUDIO = 83;
//    // 接受webrtc邀请
//    NOTIFICATION_WEBRTC_ANSWER = 84;
//    // webrtc candidate信息
//    NOTIFICATION_WEBRTC_CANDIDATE = 85;
//    // 接受webrtc邀请
//    NOTIFICATION_WEBRTC_ACCEPT = 86;
//    // 拒绝webrtc邀请
//    NOTIFICATION_WEBRTC_REJECT = 87;
//    // 被邀请方视频设备 + peeConnection已经就绪
//    NOTIFICATION_WEBRTC_READY = 88;
//    // webrtc忙线
//    NOTIFICATION_WEBRTC_BUSY = 89;
//    // 结束webrtc会话
//    NOTIFICATION_WEBRTC_CLOSE = 90;
//    // 用户进入页面，来源于小程序
//    USER_ENTER_TEMPSESSION = 91;
//    // 创建群组
//    NOTIFICATION_GROUP_CREATE = 92;
//    // 更新群名称、简介等
//    NOTIFICATION_GROUP_UPDATE = 93;
//    // 群公告
//    NOTIFICATION_GROUP_ANNOUNCEMENT = 94;
//    // 邀请多人加入群
//    NOTIFICATION_GROUP_INVITE = 95;
//    // 受邀请：同意
//    NOTIFICATION_GROUP_INVITE_ACCEPT = 96;
//    // 受邀请：拒绝
//    NOTIFICATION_GROUP_INVITE_REJECT = 97;
//    // 不需要审核加入群组
//    NOTIFICATION_GROUP_JOIN = 98;
//    // 主动申请加入群组
//    NOTIFICATION_GROUP_APPLY = 99;
//    // 同意：主动申请加群
//    NOTIFICATION_GROUP_APPLY_APPROVE = 100;
//    // 拒绝：主动申请加群
//    NOTIFICATION_GROUP_APPLY_DENY = 101;
//    // 踢人
//    NOTIFICATION_GROUP_KICK = 102;
//    // 禁言
//    NOTIFICATION_GROUP_MUTE = 103;
//    // 取消禁言
//    NOTIFICATION_GROUP_UNMUTE = 104;
//    // 设置管理员
//    NOTIFICATION_GROUP_SET_ADMIN = 105;
//    // 取消设置管理员
//    NOTIFICATION_GROUP_UNSET_ADMIN = 106;
//    // 移交群组
//    NOTIFICATION_GROUP_TRANSFER = 107;
//    // 移交群组：同意、接受
//    NOTIFICATION_GROUP_TRANSFER_ACCEPT = 108;
//    // 移交群组：拒绝
//    NOTIFICATION_GROUP_TRANSFER_REJECT = 109;
//    // 退出群组
//    NOTIFICATION_GROUP_WITHDRAW = 110;
//    // 解散群组
//    NOTIFICATION_GROUP_DISMISS = 111;
//}

//// 会话类型
//enum SessionType {
//    // 会话
//    THREAD = 0;
//    // 队列
//    QUEUE = 1;
//    // 群组
//    GROUP = 2;
//}




