syntax = "proto3";
// prevent naming conflicts between different projects.
// package protobuf.proto;

// [START java_declaration]
option java_package = "io.xiaper.protobuf.model";
option java_outer_classname = "ThreadProto";
// [END java_declaration]

// 类名前缀
// [START objc_declaration]
//option objc_class_prefix = "Proto";
// [END objc_declaration]


// import "user.proto";
// import "group.proto";
//import "google/protobuf/any.proto";

// 注意 1: 每个字段后面的序号一旦投入生产不能随便修改
// 注意 2: 前1~15序号仅需一个字节编码，尽量用在常用字段
// 注意 3: 被删除的field要作为reserved变量，不能重新赋值
// types: bool, int32/int64/uint32/uint64/sint32/sint64/fixed32/fixed64/sfixed32/sfixed64, bytes, float, double, and string

//enum ThreadType {
//    // 工作组客服会话
//    WORKGROUP = 0;
//    // 指定客服会话
//    APPOINTED = 1;
//    //  客服会话
//    KEFU = 2;
//    //  一对一会话
//    CONTACT = 3;
//    //  群组会话
//    GROUP = 4;
//}

// message KeFu {
//     //
//     User visitor = 1;
//     //
//     User agent = 2;
// }

message Thread {
    // ID
    string tid = 1;
    // 会话类型
//    ThreadType threadType = 2;
    string type = 2;
    //
    // oneof session {
    //     //
    //     KeFu kefu = 3;
    //     //
    //     User contact = 4;
    //     //
    //     Group group = 5;
    // }
    //
    string nickname = 6;
    //
    string avatar = 7;
    //
    string content = 8;
    //
    string timestamp = 9;
    //
    int32 unreadCount = 10;
    //
    // string client = 11;
}

// 列表
message ThreadList {

    repeated Thread list = 1;
}
//
